--- a/lessons/templates/lessons/cssOb1.html
+++ b/lessons/templates/lessons/cssOb1.html
@@ -43,11 +43,23 @@
 	</nav>
 	<script type="text/javascript"> (function(m,e,t,r,i,k,a){ m[i]=m[i]||function(){ (m[i].a=m[i].a||[]).push(arguments) }; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(67718821, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/67718821" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
-	<div class="text-center pt-5">
+	<style>
+
+		@media (min-width: 1300px){
+	.kj{
+	height:100vh;
+}
+
+
+}
+	</style>
+	<div class="text-center pt-5 container d-flex align-items-center justify-content-center kj" >
+		<div>
 		<h1 class="h1 text-light hh1">CSS: основы</h1>
 		<div class="mx-auto jojo mb-3 bd1 text-center ss px-1 py-5 rounded shadow " onclick="window.location.href = '№1/';"><h1 class="h1 text-light">Теория</h1></div>
 		<div class="jojo mx-auto mb-3 bd1 text-center ss px-1 py-5 rounded shadow" onclick="window.location.href = 'test1/';"><h1 class="h1 text-light">Тесты</h1></div>
 		<div class="jojo mx-auto mb-3 bd1 text-center ss px-1 py-5 rounded shadow" onclick="window.location.href = 'practice/';"><h1 class="h1 text-light">Практика</h1></div>
+		</div>
 	</div>
 <!--	<p>CSS основы выбор: теория/тесты/практика</p>-->
 	<footer class="py-5 bg-dark">
