--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -34,7 +34,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.bundle.min.js"></script>
 
 	<div class="container mt-5">
-		<div class="row obl">
+		<div class="row obll">
 <!--			<div class="col-md-1"></div>-->
 			<div class="col-md-8">
 				<h1 class="h1 text-light hh1">Web-разработка</h1>
